package solid.lsp.compliant;

public interface IVechicle {

	public int changeGear(int n);
	public void accelerate();
}
