' Generated by UML Generator
' Encoded: lL8zRm8n3DtpApmUGg3E31MKeM82gL9tu_FTMOG4EG6ajlItrtVL2Sf0AuOkKVpyzTvBfYcZvltMkxIHi4F5BP37b6OvgwptcHSKmukyCJouHae64YNFpdLLC4U5TmSmgXbr0X9o6-minQ5cdOa-ORqC4rZ7w1b3cntPyMcDnS0kGshGAf-jlGZTW44_PeX4x5anSs7W8KhPeXat7Alg4l8Ooiiu7ILJi_h9eeXd6dtjoJdRnLeXCInUcHenSPsYMyJ-FFzk4QVUu9N1lnFw5wVQjnwFFnxFHhblTbVWb4DfF-eB
' URL: http://www.plantuml.com/plantuml/uml/lL8zRm8n3DtpApmUGg3E31MKeM82gL9tu_FTMOG4EG6ajlItrtVL2Sf0AuOkKVpyzTvBfYcZvltMkxIHi4F5BP37b6OvgwptcHSKmukyCJouHae64YNFpdLLC4U5TmSmgXbr0X9o6-minQ5cdOa-ORqC4rZ7w1b3cntPyMcDnS0kGshGAf-jlGZTW44_PeX4x5anSs7W8KhPeXat7Alg4l8Ooiiu7ILJi_h9eeXd6dtjoJdRnLeXCInUcHenSPsYMyJ-FFzk4QVUu9N1lnFw5wVQjnwFFnxFHhblTbVWb4DfF-eB
' Generated on: 2026-03-19T14:48:14.001089

@startuml
skinparam classAttributeIconSize 0
hide circle

class Car {
  -gear: int
  -passengerAirBagOn: boolean
  --
  ~Car()
  +changeGear(n: int): int
  +accelerate(): void
  +takeoff(): void
  +land(): void
  +switchPassengerAirBag(on: boolean): void
}

interface IVechicle {
  +changeGear(n: int): int
  +switchPassengerAirBag(on: boolean): void
  +accelerate(): void
  +takeoff(): void
  +land(): void
}

class Plane {
  +changeGear(n: int): int
  +accelerate(): void
  +takeoff(): void
  +land(): void
  +switchPassengerAirBag(on: boolean): void
}

Car ..|> IVechicle
Plane ..|> IVechicle
@enduml